# commitgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/commitgen/: __init__.py  cli.py  detect.py  diff.py  format.py
tests/: conftest.py  test_cli.py  test_detect.py  test_format.py
